added react google maps component to requests page

--- a/client/src/requests_page/requests_layout.css
+++ b/client/src/requests_page/requests_layout.css
@@ -1,3 +1,9 @@
 #map-container {
     height: calc(100vh - 128px);
 }
+
+@media screen and (max-width: 599px) {
+    #map-container {
+        height: calc(100vh - 112px);
+    }
+}
