--- a/client/src/footer/footer.css
+++ b/client/src/footer/footer.css
@@ -6,3 +6,19 @@
     right: 0;
     margin: 0 auto;
 }
+
+#request-form > div:nth-child(3) {
+    width: 50%;
+}
+
+#request-form > div:nth-child(3) > div {
+    width: 60%;
+}
+
+#request-form > div:nth-child(4) {
+    width: 50%;
+}
+
+#request-form > div:nth-child(4) > div {
+    width: 60%;
+}
