--- a/client/src/navbar/navbar.css
+++ b/client/src/navbar/navbar.css
@@ -8,3 +8,14 @@
         right: 16px;
     }
 }
+
+#root > header.MuiPaper-root-98.MuiPaper-elevation4-104.MuiAppBar-root-253.MuiAppBar-positionStatic-257.MuiAppBar-colorPrimary-260 > div > div {
+    position: absolute;
+    right: 24px;
+}
+
+@media screen and (max-width: 599px) {
+    #root > header.MuiPaper-root-98.MuiPaper-elevation4-104.MuiAppBar-root-253.MuiAppBar-positionStatic-257.MuiAppBar-colorPrimary-260 > div > div {
+        right: 16px;
+    }
+}
