--- a/client/src/requests_page/requests_layout.css
+++ b/client/src/requests_page/requests_layout.css
@@ -7,3 +7,11 @@
         height: calc(100vh - 112px);
     }
 }
+
+.form-dialog-title h2{
+    color: white;
+}
+
+.success-snackbar div {
+    background-color: #43a047;
+}
