--- a/client/src/landing_page/landing_layout.css
+++ b/client/src/landing_page/landing_layout.css
@@ -3,3 +3,11 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.error-message {
+    margin-top: 15px;
+    margin-bottom: 3px;
+    font-weight: bold;
+    color: #f44336;
+    display: none;
+}
