sign up form validations completed

--- a/client/src/landing_page/landing_layout.css
+++ b/client/src/landing_page/landing_layout.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
 }
 
-.error-message {
+.login-error-message {
     margin-top: 15px;
     margin-bottom: 3px;
     font-weight: bold;
