--- a/client/src/login/landing_layout.css
+++ b/client/src/login/landing_layout.css
@@ -4,6 +4,14 @@
     background-repeat: no-repeat;
 }
 
+#main-header-container {
+    padding: 15px;
+}
+
+#login-form-container {
+    padding: 15px;
+}
+
 .login-error-message {
     margin-top: 15px;
     margin-bottom: 3px;
@@ -11,3 +19,25 @@
     color: #f44336;
     display: none;
 }
+
+
+
+@media screen and (max-width: 425px){
+    #log-in-form-header {
+        display: none;
+    }
+
+    #log-in-form-subheader {
+        display: none;
+    }
+
+    #login-form-container{
+        padding-top: 0px;
+    }
+
+    #main-header-container {
+        padding-bottom: 0px;
+    }
+}
+
+
