--- a/client/src/navbar/navbar.css
+++ b/client/src/navbar/navbar.css
@@ -3,6 +3,11 @@
     right: 24px;
 }
 
+.link a{
+    text-decoration: none;
+    color: #536dfe;
+}
+
 @media screen and (max-width: 599px) {
     #user-menu {
         right: 16px
