--- a/client/src/my_requests/my_requests.css
+++ b/client/src/my_requests/my_requests.css
@@ -6,6 +6,14 @@
     color: white;
 }
 
+.one-time-card {
+    background-color: #8C9EFF;
+}
+
+.material-need-card{
+    background-color: #f6685e;
+}
+
 /*.request-card {
     height: 380px;
 }*/
