--- a/client/src/login/landing_layout.css
+++ b/client/src/login/landing_layout.css
@@ -2,16 +2,18 @@
     /*background: url('../assets/img/bracelets-collaboration-colleagues-398532.jpg') center;*/
     background-size: cover;
     background-repeat: no-repeat;
-    /*background-image: url('../assets/img/bracelets-collaboration-colleagues-398532.jpg');*/
-    background-image: url('../assets/img/Bright-Blue.jpg');
+    background-image: url('../assets/img/bracelets-collaboration-colleagues-398532.jpg');
+    /*background-image: url('../assets/img/Bright-Blue.jpg');*/
     background-position: center;
     background-blend-mode: screen;
 }
 
 #main-header-container {
     padding: 15px;
-    background-image: url('../assets/img/bracelets-collaboration-colleagues-398532.jpg');
-    /*background-image: url('../assets/img/Bright-Blue.jpg');*/
+    min-height: 220px;
+    /*background-image: url('../assets/img/bracelets-collaboration-colleagues-398532.jpg');
+    background-image: url('../assets/img/Bright-Blue.jpg');*/
+    background-image: url('../assets/img/website-backgrounds-E280AB1E280AC-E280ABE280AC.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -30,9 +32,11 @@
     display: none;
 }
 
+@media screen and (max-width: 599px){
+    #main-header-container {
+        border-radius: 4px 4px 0px 0px;
+    }
 
-
-@media screen and (max-width: 425px){
     #log-in-form-header {
         display: none;
     }
@@ -49,5 +53,3 @@
         padding-bottom: 0px;
     }
 }
-
-
