added no requests component for my requests if user has no requests

--- a/client/src/my_requests/my_requests.css
+++ b/client/src/my_requests/my_requests.css
@@ -33,6 +33,10 @@
     height: 150px;
 }
 
+#no-requests-paper {
+    text-align: center;
+}
+
 @media screen and (max-width: 425px) {
     #request-card-content {
         overflow-y: scroll;
